[package]
authors = ["Brian Vincent"]
categories = ["gui"]
description = "gflux is a tiny experimental reactive component system for rust, designed to make GTK more manageable."
documentation = "https://docs.rs/gflux"
edition = "2021"
homepage = "https://github.com/bvinc/gflux"
keywords = ["component", "reactive", "ui", "gui", "gtk"]
license = "MIT"
name = "gflux"
readme = "README.md"
respository = "https://github.com/bvinc/gflux"
version = "0.1.1"

[dev-dependencies]
glib = {version = "0.17"}
gtk = {package = "gtk4", version = "0.6"}
